tweet container added

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <!-- New Tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Tweet Container CSS -->
+    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -58,6 +61,25 @@
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </form>
+      </section>
+
+      <section class="tweet-container">
+      <article class="tweet-article">
+        <header class = "tweet-header">
+          <img src="images/avatar.png">
+          <p class="name">Rhoda Jacobs</p>
+          <p class="username">@MrsJacobs</p>
+        </header>
+        <p class="tweet">Hello World!</p>
+        <footer>
+          <p class="postAge">10 days ago</p>
+        <div class="footerImgs">
+          <img src="images/flag.png">
+          <img src="images/repost.png">
+          <img src="images/like.png">
+        </div>
+        </footer>  
+        </article>
       </section>
     </main>
   </body>
