form submission using jQuery added

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
 
     <!-- Char Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- <script src="../node_modules/timeago.js/dist/timeago.min.js"></script> -->
   </head>
 
   <body>
@@ -55,7 +57,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form id="submit" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <button type="submit">Tweet</button>
@@ -64,24 +66,7 @@
       </section>
 
       <section class="tweet-container">
-
-      <article class="tweet-article">
-        <header class = "tweet-header">
-          <img src="images/avatar.png">
-          <p class="name">Rhoda Jacobs</p>
-          <p class="username">@MrsJacobs</p>
-        </header>
-        <p class="tweet">Hello World!</p>
-        <footer>
-          <p class="postAge">10 days ago</p>
-        <div class="footerImgs">
-          <img src="images/flag.png">
-          <img src="images/repost.png">
-          <img src="images/like.png">
-        </div>
-        </footer>  
-        </article>
-
+        <!-- our JS-generated code will be injected here -->
       </section>
       
     </main>
