timeago timestamps updated/new tweets are added to the top of the container

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
     <!-- Char Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
-    <!-- <script src="../node_modules/timeago.js/dist/timeago.min.js"></script> -->
+    <!-- Timeago JS -->
+    <script src="/scripts/timeago.min.js"></script>
   </head>
 
   <body>
